--- a/HerePlatformComponents/HereMap.razor
+++ b/HerePlatformComponents/HereMap.razor
@@ -1,5 +1,4 @@
 @using System
-@using Maps
 @using System.Threading.Tasks
 @using Microsoft.AspNetCore.Components
 @using Microsoft.JSInterop
@@ -22,18 +21,12 @@
     [Parameter]
     public string? CssClass { get; set; }
 
-    private string _height = "500px";
-
     /// <summary>
     /// Default height 500px.
     /// Used as style attribute "height: {Height}"
     /// </summary>
     [Parameter]
-    public string Height
-    {
-        get => _height;
-        set => _height = value ?? "500px";
-    }
+    public string Height { get; set; } = "500px";
 
     private string StyleStr => $"height: {Height};";
 
