--- a/HerePlatformComponents/_Imports.razor
+++ b/HerePlatformComponents/_Imports.razor
@@ -2,3 +2,4 @@
 @using HerePlatformComponents
 @using HerePlatformComponents.Maps
 @using HerePlatformComponents.Maps.Coordinates
+@using HerePlatformComponents.Maps.Search
