--- a/demos/HerePlatform.Demo/Components/Layout/NavMenu.razor
+++ b/demos/HerePlatform.Demo/Components/Layout/NavMenu.razor
@@ -43,6 +43,12 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Map Controls
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="map-autosuggest">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Autosuggest
+            </NavLink>
+        </div>
     </nav>
 </div>
 
