--- a/HerePlatformComponents/Maps/MarkerComponent.razor
+++ b/HerePlatformComponents/Maps/MarkerComponent.razor
@@ -1,3 +1,6 @@
+@namespace HerePlatformComponents.Maps
+@inherits ComponentBase
+
 @if (ChildContent is not null)
 {
     <template id="@TemplateElementId">
